--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "node-fetch": "^2.6.1",
     "yt-search": "^2.12.1",
     "form-data": "^4.0.0",
-    "ytdl-core": "^4.11.5",
+    "@distube/ytdl-core": "^4.13.0",
     "@google/generative-ai": "^0.21.0"
   }
 }
