--- a/package.json
+++ b/package.json
@@ -1,14 +1,45 @@
 {
-  "name": "Ladybug🐞 Ui",
+  "name": "ladybug-apis",
   "version": "2.0.0",
-  "description": "A simple and customizable API documentation interface built with Express.js.",
+  "description": "Ladybug🐞 APIs - A comprehensive API collection for downloads, AI, search, and tools built with Express.js by Ntando Mods",
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node --no-deprecation index.js"
+    "start": "node --no-deprecation index.js",
+    "dev": "nodemon --no-deprecation index.js",
+    "test": "node test.js"
   },
-  "author": "Ntando Mods Pro",
+  "keywords": [
+    "api",
+    "youtube-downloader",
+    "tiktok-downloader",
+    "instagram-downloader",
+    "facebook-downloader",
+    "ai-chatbot",
+    "image-generator",
+    "web-scraper",
+    "qr-code-generator",
+    "url-shortener",
+    "weather-api",
+    "lyrics-search",
+    "anime-search",
+    "movie-search",
+    "ladybug-api"
+  ],
+  "author": "Ntando Mods Pro <ntandomods@gmail.com>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Ntando-Modder/ladybug-apis"
+  },
+  "bugs": {
+    "url": "https://github.com/Ntando-Modder/ladybug-apis/issues"
+  },
+  "homepage": "https://ladybug-mods.com",
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  },
   "dependencies": {
     "axios": "^1.6.8",
     "body-parser": "^1.20.3",
@@ -22,6 +53,17 @@
     "yt-search": "^2.12.1",
     "form-data": "^4.0.0",
     "@distube/ytdl-core": "^4.13.0",
-    "@google/generative-ai": "^0.21.0"
+    "@google/generative-ai": "^0.21.0",
+    "qrcode": "^1.5.3",
+    "ytdl-core": "^4.11.5",
+    "youtube-dl-exec": "^2.4.0",
+    "dotenv": "^16.4.5",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.1.5",
+    "compression": "^1.7.4",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
