--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "start": "node --no-deprecation index.js",
     "dev": "nodemon --no-deprecation index.js",
-    "test": "node test.js"
+    "test": "node test.js",
+    "build": "echo 'No build step required'",
+    "postinstall": "echo 'Installation complete'"
   },
   "keywords": [
     "api",
@@ -34,6 +36,37 @@
   },
   "bugs": {
     "url": "https://github.com/Ntando-Modder/ladybug-apis/issues"
+  },
+  "homepage": "https://ladybug-mods.com",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
+  "dependencies": {
+    "axios": "^1.6.8",
+    "body-parser": "^1.20.3",
+    "cheerio": "^1.0.0",
+    "cors": "^2.8.5",
+    "chalk": "^4.1.2",
+    "express": "^4.19.2",
+    "node-fetch": "^2.7.0",
+    "yt-search": "^2.12.1",
+    "form-data": "^4.0.0",
+    "@distube/ytdl-core": "^4.13.0",
+    "@google/generative-ai": "^0.21.0",
+    "qrcode": "^1.5.3",
+    "ytdl-core": "^4.11.5",
+    "youtube-dl-exec": "^2.4.0",
+    "dotenv": "^16.4.5",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.1.5",
+    "compression": "^1.7.4",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  }
+}
   },
   "homepage": "https://ladybug-mods.com",
   "engines": {
